--- a/valentine-starter/build.gradle
+++ b/valentine-starter/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.lwohvye.java-conventions'
     id 'extra-java-module-info' // apply my own plugin written in buildSrc
-    id 'org.springframework.boot'
+    id 'org.springframework.boot' // 通过引入这个，使该subModule有了相关的Task
 }
 
 dependencies {
