--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,8 +24,8 @@ jobs:
 #         min-versions-to-keep: 1
 
     - uses: actions/checkout@v3
-    - name: Set up JDK 19
-      uses: actions/setup-java@v3.8.0
+    - name: Set up JDK
+      uses: actions/setup-java@v3.9.0
       with:
         java-version: '19'
         distribution: 'temurin'
