--- a/unicorn-core/build.gradle
+++ b/unicorn-core/build.gradle
@@ -15,18 +15,8 @@ plugins {
 //    }
 //}
 
-description = '系统核心模块'
-
-java {
-    withJavadocJar()
-    // 这个要放到dependencies之前
-    registerFeature('log4jdbc') {
-        usingSourceSet(sourceSets.main)
-    }
-}
-
 dependencies {
-    api enforcedPlatform(SpringBootPlugin.BOM_COORDINATES)
+    api platform(SpringBootPlugin.BOM_COORDINATES)
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'org.springframework.boot:spring-boot-starter-web'
     api 'org.springframework.boot:spring-boot-starter-security'
@@ -61,6 +51,32 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
 }
 
+description = '系统核心模块'
+
+java {
+    withJavadocJar()
+    // 这个要放到dependencies之前
+    registerFeature('log4jdbc') {
+        usingSourceSet(sourceSets.main)
+    }
+}
+
+jar {
+    enabled = true // separates boot jar from normal jar
+    manifest {
+        from sharedManifest
+        attributes(
+                "Implementation-Title": project.name,
+                "Implementation-Version": project.version,
+                "Automatic-Module-Name": "lwohvye." + project.name.replace("-", ".")
+        )
+    }
+    into("META-INF/maven/$project.group/$project.name") {
+        from { generatePomFileForMavenPublication }
+        rename ".*", "pom.xml"
+    }
+}
+
 // TODO: 2022/9/1 这个无法传递，就很不好
 extraJavaModuleInfo {
     // This does not have to be a complete description (e.g. here 'org.apache.commons.collections' does not export anything here).
@@ -87,10 +103,3 @@ tasks.named('compileJava') {
     options.javaModuleVersion = provider { project.version }
 }
 
-tasks.register('defineManifest', Jar) {
-    manifest = project.manifest {
-        from sharedManifest
-        attributes("Implementation-Title": project.name,
-                "Implementation-Version": archiveVersion)
-    }
-}
