--- a/build.gradle
+++ b/build.gradle
@@ -129,8 +129,8 @@ publishing {
             def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username = ossrhUsername
-                password = ossrhPassword
+                username = System.getenv('OSSRH_USERNAME') ?: ossrhUsername
+                password = System.getenv('OSSRH_PASSWORD') ?: ossrhPassword
             }
         }
     }
