--- a/unicorn-reactive/build.gradle
+++ b/unicorn-reactive/build.gradle
@@ -12,16 +12,6 @@ ext {
     set('springframeworkVersion', "6.0.2")
 }
 
-dependencies {
-    api(project(':unicorn-core')) {
-        // 括号里是Groovy的语法，定义map
-        exclude(group: 'org.springframework', module: 'spring-webmvc')
-    }
-    api 'org.springframework.boot:spring-boot-starter-webflux'
-    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-}
-
 description = '系统核心模块(WebFlux)'
 
 java {
@@ -42,6 +32,36 @@ jar {
         from { generatePomFileForMavenPublication }
         rename ".*", "pom.xml"
     }
+}
+
+publishing {
+    publications {
+        mavenJavaReact(MavenPublication) {
+            from components.java
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJavaReact
+}
+
+dependencies {
+    api(project(':unicorn-core')) {
+        // 括号里是Groovy的语法，定义map
+        exclude(group: 'org.springframework', module: 'spring-webmvc')
+    }
+    api 'org.springframework.boot:spring-boot-starter-webflux'
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 }
 
 extraJavaModuleInfo {
