OSSRH SNAPSHOT publish

--- a/unicorn-core/build.gradle
+++ b/unicorn-core/build.gradle
@@ -56,6 +56,19 @@ publishing {
             }
         }
     }
+    repositories {
+        maven {
+            name = "OSSRH"
+            // change URLs to point to your repos, e.g. http://my.org/repo
+            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            credentials {
+                username = System.getenv('OSSRH_USERNAME') ?: ossrhUsername
+                password = System.getenv('OSSRH_PASSWORD') ?: ossrhPassword
+            }
+        }
+    }
 }
 
 signing {
