--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,22 @@
 import org.gradle.api.java.archives.internal.DefaultManifest
 
+buildscript {
+    repositories {
+        mavenCentral()
+        //Needed only for SNAPSHOT versions
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+    dependencies {
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.30.0"
+    }
+}
+
 plugins {
     id 'com.lwohvye.java-conventions'
     id 'org.springframework.boot' // 主要是定义了这个，定义了SpringBoot的Version相关，并提供了application, bootJar, bootBuildImage这些Task
     // 在parent root执行Task，会同步执行sub project的Task，比如执行了bootJar，那会执行subPro的bootJar(若其中没有该Task会ignore)
     id 'signing'
+    id 'io.codearte.nexus-staging' version '0.30.0'
 }
 
 ext.sharedManifest = manifest {
@@ -102,7 +114,7 @@ publishing {
                     connection = 'scm:git:git://github.com/WHY-lWoHvYe/valentine-p2p.git'
                     developerConnection = 'scm:git:ssh://github.com/WHY-lWoHvYe/valentine-p2p.git'
                     url = 'https://github.com/WHY-lWoHvYe/valentine-p2p/tree/main'
-                    tag = 'unicorn-v4.0.0'
+                    tag = 'unicorn-v4.0.0-SNAPSHOT'
                 }
             }
         }
@@ -130,4 +142,11 @@ javadoc {
     if (JavaVersion.current().isJava9Compatible()) {
         options.addBooleanOption('html5', true)
     }
+}
+
+nexusStaging {
+    serverUrl = "https://s01.oss.sonatype.org/service/local/"
+    //required only for projects registered in Sonatype after 2021-02-24
+//    packageGroup = "org.mycompany.myproject" //optional if packageGroup == project.getGroup()
+//    stagingProfileId = "yourStagingProfileId" //when not defined will be got from server using "packageGroup"
 }
