--- a/build.gradle
+++ b/build.gradle
@@ -127,8 +127,8 @@ publishing {
             def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials {
-                username = System.getenv('OSSRH_USERNAME') ?: ossrhUsername ?: ''
-                password = System.getenv('OSSRH_PASSWORD') ?: ossrhPassword ?: ''
+                username = System.getenv('OSSRH_USERNAME') ?: System.getProperty('ossrhUsername')
+                password = System.getenv('OSSRH_PASSWORD') ?: System.getenv('ossrhPassword')
             }
         }
     }
