--- a/valentine-starter/build.gradle
+++ b/valentine-starter/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.lwohvye.java-conventions'
-    id 'extra-java-module-info' // apply my own plugin written in buildSrc
+    id 'org.gradlex.extra-java-module-info'
     id 'org.springframework.boot' // 通过引入这个，使该subModule有了相关的Task
 }
 
@@ -40,7 +40,7 @@ extraJavaModuleInfo {
     automaticModule("redisson-${redissonVersion}.jar", 'org.redisson')
     automaticModule("spring-retry-${springretryVersion}.jar", 'spring.retry')
     automaticModule("thumbnailator-${thumbnailatorVersion}.jar", 'net.coobird.thumbnailator')
-    module('jakarta.mail-1.0.0.jar', 'jakarta.mail', '1.0.0', true) {
+    module('jakarta.mail-1.0.0.jar', 'jakarta.mail', '1.0.0') {
         uses('jakarta.mail.util.StreamProvider')
     }
 }
