--- a/unicorn-tp-tools/build.gradle
+++ b/unicorn-tp-tools/build.gradle
@@ -74,11 +74,11 @@ dependencies {
 }
 
 extraJavaModuleInfo {
-    automaticModule("hutool-all-${hutoolVersion}.jar", 'cn.hutool')
-    automaticModule("mapstruct-spring-extensions-${mapstructSpringVersion}.jar", 'org.mapstruct.extensions.spring')
-    automaticModule("redisson-${redissonVersion}.jar", 'org.redisson')
-    automaticModule("thumbnailator-${thumbnailatorVersion}.jar", 'net.coobird.thumbnailator')
-    module('jakarta.mail-1.0.0.jar', 'jakarta.mail', '1.0.0') {
+    automaticModule("cn.hutool:hutool-all", 'cn.hutool')
+    automaticModule("org.mapstruct.extensions.spring:mapstruct-spring-extensions", 'org.mapstruct.extensions.spring')
+    automaticModule("org.redisson:redisson", 'org.redisson')
+    automaticModule("net.coobird:thumbnailator", 'net.coobird.thumbnailator')
+    module('org.eclipse.angus:jakarta.mail', 'jakarta.mail', '1.0.0') {
         uses('jakarta.mail.util.StreamProvider')
     }
 }
