--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,10 @@ pluginManagement({
     })
 })
 
+plugins {
+    id 'com.gradle.enterprise' version '3.12.1'
+}
+
 rootProject.name = 'valentine-p2p'
 include(':unicorn-core')
 include(':unicorn-reactive')
@@ -16,3 +20,14 @@ include(':unicorn-tp-tools')
 include(':unicorn-sys-api')
 include(':unicorn-security')
 include(':valentine-starter')
+
+gradleEnterprise {
+    def runsOnCI = providers.environmentVariable("CI").getOrElse("false").toBoolean()
+    if (runsOnCI) {
+        buildScan {
+            publishAlways()
+            termsOfServiceUrl = "https://gradle.com/terms-of-service"
+            termsOfServiceAgree = "yes"
+        }
+    }
+}
