--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ fastutilVersion=8.5.9
 hutoolVersion=5.8.10
 ip2regionVersion=3.0.1
 jjwtVersion=0.11.5
+kotlinVersion=1.8.0
+kotlinxCoroutinesVersion=1.6.4
 log4jdbcVersion=1.18
 logbackVersion=1.4.5
 logstashVersion=7.2
