--- a/valentine-starter/build.gradle
+++ b/valentine-starter/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 }
 
 extraJavaModuleInfo {
+    failOnMissingModuleInfo.set(false)
     automaticModule("io.github.mouzt:bizlog-sdk", 'com.mzt.logapi')
     automaticModule("com.github.whvcse:easy-captcha", 'com.wf.captcha')
     automaticModule("ch.ethz.ganymed:ganymed-ssh2", 'ch.ethz.ssh2')
@@ -45,11 +46,12 @@ extraJavaModuleInfo {
     automaticModule("org.redisson:redisson", 'org.redisson')
     automaticModule("org.springframework.retry:spring-retry", 'spring.retry')
     automaticModule("net.coobird:thumbnailator", 'net.coobird.thumbnailator')
-    automaticModule("org.jetbrains.kotlinx", 'kotlinx-coroutines-core')
-    automaticModule("org.jetbrains.kotlinx", 'kotlinx-coroutines-core-jvm')
-    automaticModule("org.jetbrains.kotlinx", 'kotlinx-coroutines-jdk8')
-    automaticModule("org.jetbrains.kotlinx", 'kotlinx-coroutines-jdk9')
-    automaticModule("org.jetbrains.kotlinx", 'kotlinx-coroutines-reactive')
+    automaticModule("org.jetbrains.kotlin:kotlin-stdlib-common", 'kotlin.stdlib.common')
+    automaticModule("org.jetbrains.kotlinx:kotlinx-coroutines-core", 'kotlinx.coroutines.core')
+    automaticModule("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", 'kotlinx.coroutines.core.jvm')
+    automaticModule("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8", 'kotlinx.coroutines.jdk8')
+    automaticModule("org.jetbrains.kotlinx:kotlinx-coroutines-jdk9", 'kotlinx.coroutines.jdk9')
+    automaticModule("org.jetbrains.kotlinx:kotlinx-coroutines-reactive", 'kotlinx.coroutines.reactive')
     module('org.eclipse.angus:jakarta.mail', 'jakarta.mail', '1.0.0') {
         uses('jakarta.mail.util.StreamProvider')
     }
