--- a/buildSrc/src/main/groovy/com.lwohvye.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/com.lwohvye.java-conventions.gradle
@@ -24,6 +24,11 @@ group = 'com.lwohvye'
 version = '4.0.0-SNAPSHOT'
 java.sourceCompatibility = JavaVersion.VERSION_19
 
+ext {
+    ossrhUsername = System.getenv('OSSRH_USERNAME') ?: ossrhUsername ?: ''
+    ossrhPassword = System.getenv('OSSRH_PASSWORD') ?: ossrhPassword ?: ''
+}
+
 java {
     withSourcesJar()
 }
