--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -46,7 +46,7 @@ jobs:
         # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
         java-version: '17'
         # Java distribution. See the list of supported distributions in README file
-        distribution: 'temurin'
+        distribution: 'oracle'
         # The package type (jdk, jre, jdk+fx, jre+fx)
         #java-package: # optional, default is jdk
         # The architecture of the package
