--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -41,12 +41,12 @@ jobs:
         uses: actions/checkout@v3
         # see: https://github.com/marketplace/actions/setup-java-jdk
       - name: Setup Java JDK
-        uses: actions/setup-java@v3.9.0
+        uses: actions/setup-java@v3.10.0
         with:
           # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
           java-version: '19'
           # Java distribution. See the list of supported distributions in README file
-          distribution: 'corretto'
+          distribution: 'oracle'
           # The package type (jdk, jre, jdk+fx, jre+fx)
           #java-package: # optional, default is jdk
           # The architecture of the package
