--- a/unicorn-security/build.gradle
+++ b/unicorn-security/build.gradle
@@ -80,16 +80,16 @@ dependencies {
 
 extraJavaModuleInfo {
     failOnMissingModuleInfo.set(false)
-    automaticModule("io.github.mouzt:bizlog-sdk", 'com.mzt.logapi')
-    automaticModule("com.github.whvcse:easy-captcha", 'com.wf.captcha')
-    automaticModule("ch.ethz.ganymed:ganymed-ssh2", 'ch.ethz.ssh2')
-    automaticModule("cn.hutool:hutool-all", 'cn.hutool')
-    automaticModule("io.jsonwebtoken:jjwt-api", 'io.jsonwebtoken.api')
-    automaticModule("io.jsonwebtoken:jjwt-impl", 'io.jsonwebtoken.impl')
-    automaticModule("io.jsonwebtoken:jjwt-jackson", 'io.jsonwebtoken.jackson')
-    automaticModule("com.jcraft:jsch", 'com.jcraft.jsch')
-    automaticModule("org.quartz-scheduler:quartz", 'org.quartz')
-    automaticModule("org.redisson:redisson", 'org.redisson')
+    automaticModule("io.github.mouzt:bizlog-sdk", 'bizlog.sdk')
+    automaticModule("com.github.whvcse:easy-captcha", 'easy.captcha')
+    automaticModule("ch.ethz.ganymed:ganymed-ssh2", 'ganymed.ssh2')
+    automaticModule("cn.hutool:hutool-all", 'hutool.all')
+    automaticModule("io.jsonwebtoken:jjwt-api", 'jjwt.api')
+    automaticModule("io.jsonwebtoken:jjwt-impl", 'jjwt.impl')
+    automaticModule("io.jsonwebtoken:jjwt-jackson", 'jjwt.jackson')
+    automaticModule("com.jcraft:jsch", 'jsch')
+    automaticModule("org.quartz-scheduler:quartz", 'quartz')
+    automaticModule("org.redisson:redisson", 'redisson')
     automaticModule("org.springframework.retry:spring-retry", 'spring.retry')
-    automaticModule("net.coobird:thumbnailator", 'net.coobird.thumbnailator')
+    automaticModule("net.coobird:thumbnailator", 'thumbnailator')
 }
