--- a/unicorn-tp-tools/build.gradle
+++ b/unicorn-tp-tools/build.gradle
@@ -62,9 +62,9 @@ dependencies {
 
 extraJavaModuleInfo {
     failOnMissingModuleInfo.set(false)
-    automaticModule("cn.hutool:hutool-all", 'cn.hutool')
-    automaticModule("org.redisson:redisson", 'org.redisson')
-    automaticModule("net.coobird:thumbnailator", 'net.coobird.thumbnailator')
+    automaticModule("cn.hutool:hutool-all", 'hutool.all')
+    automaticModule("org.redisson:redisson", 'redisson')
+    automaticModule("net.coobird:thumbnailator", 'thumbnailator')
     module('org.eclipse.angus:jakarta.mail', 'jakarta.mail', '1.0.0') {
         uses('jakarta.mail.util.StreamProvider')
     }
