--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ buildscript {
         }
     }
     dependencies {
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.30.0"
         classpath "org.gradlex:extra-java-module-info:1.2.1"
     }
 }
@@ -22,7 +21,7 @@ plugins {
     id 'org.springframework.boot' // 主要是定义了这个，定义了SpringBoot的Version相关，并提供了application, bootJar, bootBuildImage这些Task
     // 在parent root执行Task，会同步执行sub project的Task，比如执行了bootJar，那会执行subPro的bootJar(若其中没有该Task会ignore)
     id 'signing'
-    id 'io.codearte.nexus-staging' version '0.30.0'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 ext.sharedManifest = manifest {
@@ -91,8 +90,8 @@ publishing {
                 url = 'https://github.com/WHY-lWoHvYe/valentine-p2p.git'
                 properties = [
                         myProp                : "chaste unicorn",
-                        "spring-boot.version" : "3.0.0",
-                        "project.core.version": "4.0.0"
+                        "spring-boot.version" : "${springBootVersion}",
+                        "project.core.version": "${version}"
                 ]
                 licenses {
                     license {
@@ -112,7 +111,7 @@ publishing {
                     connection = 'scm:git:git://github.com/WHY-lWoHvYe/valentine-p2p.git'
                     developerConnection = 'scm:git:ssh://github.com/WHY-lWoHvYe/valentine-p2p.git'
                     url = 'https://github.com/WHY-lWoHvYe/valentine-p2p/tree/main'
-                    tag = 'unicorn-v4.0.0-SNAPSHOT'
+                    tag = "unicorn-v${version}-SNAPSHOT"
                 }
             }
         }
@@ -129,9 +128,13 @@ javadoc {
     }
 }
 
-nexusStaging {
-    serverUrl = "https://s01.oss.sonatype.org/service/local/"
-    //required only for projects registered in Sonatype after 2021-02-24
-//    packageGroup = "org.mycompany.myproject" //optional if packageGroup == project.getGroup()
-//    stagingProfileId = "yourStagingProfileId" //when not defined will be got from server using "packageGroup"
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            username = ossrhUsername // defaults to project.properties["myNexusUsername"]
+            password = ossrhPassword // defaults to project.properties["myNexusPassword"]
+        }
+    }
 }
